Working for mobile

--- a/index.html
+++ b/index.html
@@ -1,1 +1,138 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="initial-scale=1, viewport-fit=cover">
+  <title>William Wong | Product Software Engineer</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/bootstrap-reboot.css">
+  <link rel="stylesheet" href="css/styles.css">
+  <!-- <script src="script.js"></script> -->
+</head>
+
+<body>
+  <main>
+    <header>
+      <div class="logo-wrap">
+        <span class="logo">William Wong</span>
+        <span class="tagline">Side-project Portfolio</span>
+      </div>
+
+      <div class="social-links">
+        <a href="https://github.com/itswil">
+          <svg height="32" width="32" aria-hidden="true" viewBox="0 0 16 16" version="1.1" data-view-component="true"
+            class="icon-github">
+            <path
+              d="M8 0c4.42 0 8 3.58 8 8a8.013 8.013 0 0 1-5.45 7.59c-.4.08-.55-.17-.55-.38 0-.27.01-1.13.01-2.2 0-.75-.25-1.23-.54-1.48 1.78-.2 3.65-.88 3.65-3.95 0-.88-.31-1.59-.82-2.15.08-.2.36-1.02-.08-2.12 0 0-.67-.22-2.2.82-.64-.18-1.32-.27-2-.27-.68 0-1.36.09-2 .27-1.53-1.03-2.2-.82-2.2-.82-.44 1.1-.16 1.92-.08 2.12-.51.56-.82 1.28-.82 2.15 0 3.06 1.86 3.75 3.64 3.95-.23.2-.44.55-.51 1.07-.46.21-1.61.55-2.33-.66-.15-.24-.6-.83-1.23-.82-.67.01-.27.38.01.53.34.19.73.9.82 1.13.16.45.68 1.31 2.69.94 0 .67.01 1.3.01 1.49 0 .21-.15.45-.55.38A7.995 7.995 0 0 1 0 8c0-4.42 3.58-8 8-8Z">
+            </path>
+          </svg>
+        </a>
+      </div>
+    </header>
+
+    <section>
+      <div class="content">
+        <img src="img/cuteqr.png" alt="Screenshot of CuteQR Web App" class="screenshot" width="400" height="400" />
+        <div class="detail">
+          <div class="section-heading">
+            <h2>CuteQR</h2>
+            <p class="date">Dec 2022</p>
+          </div>
+          <p class="description">A simple QR code scanner with locally stored history</p>
+          <ul class="tools">
+            <li>React</li>
+            <li>Astro</li>
+            <li>Tailwind</li>
+            <li>Netlify</li>
+          </ul>
+          <a href="https://cuteqr.netlify.app" class="link">Visit website
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="content">
+        <img src="img/pns.png" alt="Products list on a price comparison Web App PNS Essentials" class="screenshot" />
+        <div class="detail">
+          <div class="section-heading">
+            <h2>PNS Essentials</h2>
+            <p class="date">May 2023</p>
+          </div>
+          <p class="description">Supermarket price comparison website helping customers make informed decisions</p>
+          <ul class="tools">
+            <li>Netlify Functions</li>
+            <li>Astro</li>
+            <li>Tailwind</li>
+            <li>Netlify</li>
+          </ul>
+          <a href="https://pns-essentials.netlify.app" class="link">Visit website
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="content">
+        <img src="img/biotheus.jpg" alt="Homepage of Biotheus Inc." class="screenshot" width="400" height="400" />
+        <div class="detail">
+          <div class="section-heading">
+            <h2>Biotheus</h2>
+            <p class="date">Oct 2019</p>
+          </div>
+          <p class="description">Company website for a biotech startup</p>
+          <ul class="tools">
+            <li>Getsby</li>
+            <li>Styled Components</li>
+            <li>Prettier</li>
+            <li>Netlify</li>
+          </ul>
+          <a href="https://biotheus.netlify.app" class="link">Visit website
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
+
+    <section>
+      <div class="content">
+        <img src="img/diceapp.jpg" alt="Homepage of DiceApp.io" class="screenshot" width="400" height="400" />
+        <div class="detail">
+          <div class="section-heading">
+            <h2>DiceApp.io</h2>
+            <p class="date">Mar 2019</p>
+          </div>
+          <p class="description">A dice-roll and coin-flip educational website</p>
+          <ul class="tools">
+            <li>NextJS</li>
+            <li>Framer Motion</li>
+            <li>Netlify</li>
+          </ul>
+          <a href="https://diceappio.netlify.app" class="link">Visit website
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+              stroke="currentColor">
+              <path stroke-linecap="round" stroke-linejoin="round" d="M13.5 4.5 21 12m0 0-7.5 7.5M21 12H3" />
+            </svg>
+          </a>
+        </div>
+      </div>
+    </section>
+
+  </main>
+</body>
+
+</html>
