Add landscape fix

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
           </div>
           <p class="description">Company website for a biotech startup</p>
           <ul class="tools">
-            <li>Getsby</li>
+            <li>Gatsby</li>
             <li>Styled Components</li>
             <li>Prettier</li>
             <li>Netlify</li>
